Add back receptionist

--- a/F23-resume.tex
+++ b/F23-resume.tex
@@ -164,8 +164,7 @@
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Help guests, students, and faculty via organizing mail, and analyzing building usage}
-        \resumeItem{Organizing mail, analyzing building usage, inspecting building infrastructure.}
+        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 % END REMOVE
 
