Update gerp spec

--- a/F23-resume.tex
+++ b/F23-resume.tex
@@ -229,9 +229,8 @@
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
           \resumeItemListStart
-            \resumeItem{Program that searches for user-queried text from specified directory}
-            \resumeItem{Built around dictionary ADT, where dictionary stores words and filepath}
-            \resumeItem{Built with partner powered by Git content management}
+            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
+            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and shared via Git}
           \resumeItemListEnd
           \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
