Change CS15 description and sort projects

--- a/F23-resume.tex
+++ b/F23-resume.tex
@@ -98,12 +98,6 @@
 
 \begin{document}
 
-% TODO
-% Change to I statements
-% Relevant projects for each job
-% relevant coursework on one line
-% GPA first
-% switch the position and employer
 
 %----------HEADING----------
 
@@ -154,9 +148,9 @@
       {Tufts University, Department of Computer Science}{May 2023 – Present}
       {Course Assistant for Data Structures and Algorithms}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Hosting office hours aiding students in course projects and lecture topics.}
-        \resumeItem{Grading student assignments by studying submissions for functionality, testing, and course coding standards.}
-        \resumeItem{Contributing to a program that organizes course grading. Built as a Python CLI mimicking a SQL database.}
+        \resumeItem{Host office hours aiding students in course projects and lecture topics.}
+        \resumeItem{Grade student assignments by studying submissions for functionality, testing, and course coding standards.}
+        \resumeItem{Contribute to a program that organizes course grading. Built as a Python CLI mimicking a SQL database.}
       \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
@@ -209,7 +203,8 @@
             \resumeItem{Used Python \texttt{tz} library in conjunction with database of
             IATA-recognised airports to parse user input for calculations}
           \resumeItemListEnd
-      % REMOVE HERE FOR ONE PAGE
+  
+      % GAMING, WEBDEV
       % \resumeProjectHeading{}{}
       % \resumeProjectHeading
       %     {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
@@ -217,15 +212,16 @@
       %       \resumeItem{Memory game generating random IATA airport codes for the user to recall}
       %       \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
       %     \resumeItemListEnd
+
+      % DATA SCIENCE
       % \resumeProjectHeading
       %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
       %     \resumeItemListStart
-      %       \resumeItem{Script that maps inputted IATA airport codes into an output file for their country}
-      %       \resumeItem{Used to find flights for any airport in country on ITA Matrix}
+      %       \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
+      %       \resumeItem{Used for searching for flights by country in ITA Matrix}
       %     \resumeItemListEnd
-      % END REMOVE
 
-      % REMOVE FOR ONE PAGE
+      % ALGOS
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
           \resumeItemListStart
@@ -235,10 +231,9 @@
           \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
           \resumeItemListStart
-            \resumeItem{Compressor/decompressor for text files utilising Huffman coding process}
+            \resumeItem{Wrote a Huffman compressor/decompressor for text files}
             \resumeItem{Practiced using priority queue ADT and recursion in C++}
           \resumeItemListEnd
-      % END REMOVE
     \resumeSubHeadingListEnd
 
 
