Add full stops and compile PDF

--- a/source.tex
+++ b/source.tex
@@ -158,7 +158,7 @@
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus}
+        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus.}
       \resumeItemListEnd
 % END REMOVE
 
@@ -166,8 +166,8 @@
       {Texas Heart Institute}{May 2021 – Aug. 2021}
       {Visual Communications Intern}{Houston, TX}
       \resumeItemListStart
-        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+        \resumeItem{Designed graphics and created animations representing cardiological research for publicity.}
+        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}.}
     \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
@@ -190,18 +190,19 @@
       \resumeProjectHeading
           {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
           \resumeItemListStart
-            \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-            \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
-            \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+            \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization.}
+            \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}
+            \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma.}
           \resumeItemListEnd
       \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
             \resumeItem{Constructed a tool to aid sleeptime changes when traveling between timezones during air travel,
             given flight details (e.g. airports, departure and arrival
-            times)}
+            times).}
+            % TODO Fix this point 
             \resumeItem{Used Python \texttt{tz} library in conjunction with database of
-            IATA-recognised airports to parse user input for calculations}
+            IATA-recognised airports to parse user input for calculations.}
           \resumeItemListEnd
   
       % GAMING, WEBDEV
@@ -225,14 +226,13 @@
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
           \resumeItemListStart
-            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
-            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and shared via Git}
+            \resumeItem{Built a program with partner that searches for user-queried text from specified directory.}
+            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and shared via Git.}
           \resumeItemListEnd
           \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
           \resumeItemListStart
-            \resumeItem{Wrote a Huffman compressor/decompressor for text files}
-            \resumeItem{Practiced using priority queue ADT and recursion in C++}
+          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
