Change project formatting

--- a/source.tex
+++ b/source.tex
@@ -153,14 +153,12 @@
         \resumeItem{Contribute to a program that organizes course grading. Built as a Python CLI mimicking a SQL database.}
       \resumeItemListEnd
 
-% REMOVE HERE FOR ONE PAGE
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
         \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus.}
       \resumeItemListEnd
-% END REMOVE
 
     \resumeSubheading
       {Texas Heart Institute}{May 2021 – Aug. 2021}
@@ -182,29 +180,24 @@
 % END REMOVE
 
   \resumeSubHeadingListEnd
-
-
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
-          \resumeItemListStart
-            \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization.}
-            \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}
-            \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma.}
-          \resumeItemListEnd
-      \resumeProjectHeading
+    \resumeProjectHeading
+        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        \resumeItemListStart
+          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization.}
+          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma.}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}\resumeItemListEnd
+    \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
             \resumeItem{Constructed a tool to aid sleeptime changes when traveling between timezones during air travel,
             given flight details (e.g. airports, departure and arrival
             times).}
-            % TODO Fix this point 
-            \resumeItem{Used Python \texttt{tz} library in conjunction with database of
+            \resumeItem{Crafted using Python \texttt{tz} library in conjunction with database of
             IATA-recognised airports to parse user input for calculations.}
           \resumeItemListEnd
-  
       % GAMING, WEBDEV
       % \resumeProjectHeading{}{}
       % \resumeProjectHeading
@@ -213,7 +206,6 @@
       %       \resumeItem{Memory game generating random IATA airport codes for the user to recall}
       %       \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
       %     \resumeItemListEnd
-
       % DATA SCIENCE
       % \resumeProjectHeading
       %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
@@ -221,7 +213,6 @@
       %       \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
       %       \resumeItem{Used for searching for flights by country in ITA Matrix}
       %     \resumeItemListEnd
-
       % ALGOS
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
