Removed full stops and added interests

--- a/source.tex
+++ b/source.tex
@@ -150,7 +150,7 @@
       \resumeItemListStart
         \resumeItem{Host office hours aiding students in course projects and lecture topics.}
         \resumeItem{Grade student assignments by studying submissions for functionality, testing, and course coding standards.}
-        \resumeItem{Contribute to a program that organizes course grading. Built as a Python CLI mimicking a SQL database.}
+        \resumeItem{Contribute to a program that organizes course grading built as a Python CLI mimicking a SQL database.}
       \resumeItemListEnd
 
       \resumeSubheading
@@ -218,7 +218,7 @@
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
           \resumeItemListStart
             \resumeItem{Built a program with partner that searches for user-queried text from specified directory.}
-            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and shared via Git.}
+            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git.}
           \resumeItemListEnd
           \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
