Removed full stops and added interests

--- a/source.tex
+++ b/source.tex
@@ -139,33 +139,33 @@
       {Tufts JumboCode}{September 2023 – Present}
       {Developer}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Develop an app benefiting the Emerald Necklace Conservancy educating visitors on preservation.}
-        \resumeItem{Design a full-stack web application using React, MongoDB, Bun.}
-        \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools.}
+        \resumeItem{Develop an app benefiting the Emerald Necklace Conservancy educating visitors on preservation}
+        \resumeItem{Design a full-stack web application using React, MongoDB, Bun}
+        \resumeItem{Practice team-based coding powered by Git and GitHub collaboration tools}
       \resumeItemListEnd
 
       \resumeSubheading
       {Tufts University, Department of Computer Science}{May 2023 – Present}
       {Course Assistant for Data Structures and Algorithms}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Host office hours aiding students in course projects and lecture topics.}
-        \resumeItem{Grade student assignments by studying submissions for functionality, testing, and course coding standards.}
-        \resumeItem{Contribute to a program that organizes course grading built as a Python CLI mimicking a SQL database.}
+        \resumeItem{Host office hours aiding students in course projects and lecture topics}
+        \resumeItem{Grade student assignments by studying submissions for functionality, testing, and course coding standards}
+        \resumeItem{Contribute to a program that organizes course grading built as a Python CLI mimicking a SQL database}
       \resumeItemListEnd
 
       \resumeSubheading
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus.}
+        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Texas Heart Institute}{May 2021 – Aug. 2021}
+      {Texas Heart Institute}{May 2021 – Aug 2021}
       {Visual Communications Intern}{Houston, TX}
       \resumeItemListStart
-        \resumeItem{Designed graphics and created animations representing cardiological research for publicity.}
-        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}.}
+        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
     \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
@@ -186,17 +186,17 @@
     \resumeProjectHeading
         {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
         \resumeItemListStart
-          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization.}
-          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma.}
-          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git.}\resumeItemListEnd
+          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}\resumeItemListEnd
     \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
             \resumeItem{Constructed a tool to aid sleeptime changes when traveling between timezones during air travel,
             given flight details (e.g. airports, departure and arrival
-            times).}
+            times)}
             \resumeItem{Crafted using Python \texttt{tz} library in conjunction with database of
-            IATA-recognised airports to parse user input for calculations.}
+            IATA-recognised airports to parse user input for calculations}
           \resumeItemListEnd
       % GAMING, WEBDEV
       % \resumeProjectHeading{}{}
@@ -217,21 +217,21 @@
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
           \resumeItemListStart
-            \resumeItem{Built a program with partner that searches for user-queried text from specified directory.}
-            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git.}
+            \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
+            \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
           \resumeItemListEnd
           \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
           \resumeItemListStart
-          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion.}
+          \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 
 %
-%-----------PROGRAMMING SKILLS-----------
-\section{Skills}
+%-----------SKILLS-----------
+\section{Skills and Interests}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Programming Languages}{: C/C++, Python, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
@@ -240,10 +240,11 @@
      \textbf{APIs and Libraries}{: LeafletJS, OpenStreetMap, Maptiler, Maplibre, Mapbox, ArcGIS, OpenSkyNetwork, pandas} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
-     \textbf{Woodworking}{: Proficiency in power tooling like sawing (miter, table, band) and drilling}
+     \textbf{Travel}{: Hiking mountains, traveling to novel destinations, searching for amazing flight deals} \\
+     \textbf{Standards}{: Expert in recalling IATA airport codes, ISO country codes, and timezones} \\
+     \textbf{Woodworking}{: Prowess using power tools like a saw (miter, table, band) and drill} \\
+     
     }}
  \end{itemize}
 
-
-%-------------------------------------------
 \end{document}
