Update receptionist action verb

--- a/source.tex
+++ b/source.tex
@@ -157,7 +157,7 @@
       {Tufts University, Office of Academic Space Management}{May 2023 – Present}
       {Receptionist}{Somerville, MA}
       \resumeItemListStart
-        \resumeItem{Help community via organizing mail, and analyzing building usage for largest academic buildings on campus}
+        \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 
     \resumeSubheading
