Remove artificial intelligence from courses

--- a/source.tex
+++ b/source.tex
@@ -118,7 +118,7 @@
       {Tufts University}{Aug. 2022 -- May 2026}
       {GPA 3.82, BS Computer Science, BA Applied Mathematics}{Somerville, MA}
       \resumeSubSubheading{Relevant Coursework: Machine structure and Assembly programming, Data structures and algorithms}{}
-      \resumeSubSubheading{Mathematical proofs, Artificial intelligence, Linear algebra}{}{}{}
+      \resumeSubSubheading{Mathematical proofs, Linear algebra}{}{}{}
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
