Add COMP40 topics

--- a/source.tex
+++ b/source.tex
@@ -87,7 +87,7 @@
 
 \renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
-\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}]}
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0in, label={}]}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
@@ -231,11 +231,12 @@
 %
 %-----------SKILLS-----------
 \section{Skills and Interests}
- \begin{itemize}[leftmargin=0.15in, label={}]
+ \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Programming Languages}{: C/C++, Python, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
+     \textbf{Programming Languages}{: C/C++, Python, Assembly, JavaScript, TypeScript, HTML/CSS, R, SQL, LaTeX} \\
      \textbf{Frameworks and Environments}{: React, React Native, Node.js, MongoDB, Bun} \\
-     \textbf{Developer Tools}{: Visual Studio Code, Git, GitHub, Makefile, Figma, Unix, Bash, SFTP, SSH, AutoHotkey (Windows)} \\
+     \textbf{Technical Topics}{: Machine arithmetic, memory architecture, performance analytics, data structures and algorithms, OOP} \\
+     \textbf{Developer Tools}{: Visual Studio Code, Git, GitHub, Makefile, Figma, Linux kernel, Bash, SFTP, SSH, AutoHotkey (Windows)} \\
      \textbf{APIs and Libraries}{: LeafletJS, OpenStreetMap, Maptiler, Maplibre, Mapbox, ArcGIS, OpenSkyNetwork, pandas, tz} \\
      \textbf{Media}{: Droneography, Photoshop, Lightroom, After Effects, Davinci Resolve Studio, Premiere Pro, InDesign, Wordpress} \\
      \textbf{Spoken Languages}{: Proficiency in English, Hindi, Spanish, and French} \\
