Add back World Clock, remove JetLag

--- a/source.tex
+++ b/source.tex
@@ -183,20 +183,20 @@
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-    % \resumeProjectHeading
-    %     {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
-    %     \resumeItemListStart
-    %       \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-    %       \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
-    %       \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}\resumeItemListEnd
     \resumeProjectHeading
-          {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
-          \resumeItemListStart
-            \resumeItem{Construct a tool to aid sleeptime changes when traveling between timezones during air travel,
-            given flight details (e.g. airports, departure and arrival
-            times)}
-            \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
-          \resumeItemListEnd
+        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        \resumeItemListStart
+          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}\resumeItemListEnd
+    % \resumeProjectHeading
+    %       {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
+    %       \resumeItemListStart
+    %         \resumeItem{Construct a tool to aid sleeptime changes when traveling between timezones during air travel,
+    %         given flight details (e.g. airports, departure and arrival
+    %         times)}
+    %         \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
+    %       \resumeItemListEnd
       % GAMING, WEBDEV
       % \resumeProjectHeading{}{}
       % \resumeProjectHeading
