Fix syntax of World Clock

--- a/source.tex
+++ b/source.tex
@@ -183,7 +183,7 @@
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-    \resumeProjectHeading
+    % \resumeProjectHeading
         % {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
         % \resumeItemListStart
         %   \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
