Add World Clock, in place of IATA Country Sorter

--- a/source.tex
+++ b/source.tex
@@ -183,13 +183,13 @@
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-    % \resumeProjectHeading
-        % {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
-        % \resumeItemListStart
-        %   \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-        %   \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
-        %   \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
-        %   \resumeItemListEnd
+    \resumeProjectHeading
+        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        \resumeItemListStart
+          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
+          \resumeItemListEnd
     \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
@@ -207,12 +207,12 @@
       %       \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
       %     \resumeItemListEnd
       % DATA SCIENCE
-      \resumeProjectHeading
-          {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
-          \resumeItemListStart
-            \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
-            \resumeItem{Used for searching for flights by country in ITA Matrix}
-          \resumeItemListEnd
+      % \resumeProjectHeading
+      %     {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
+      %     \resumeItemListStart
+      %       \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
+      %       \resumeItem{Used for searching for flights by country in ITA Matrix}
+      %     \resumeItemListEnd
       % ALGOS
       \resumeProjectHeading
           {\textbf{gerp} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023 – May 2023}
