--- a/source.tex
+++ b/source.tex
@@ -122,12 +122,12 @@
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
-% \resumeSubHeadingListStart
-%     \resumeSubheading
-%       {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
-%       {GPA 4.70 / 4.00}{Houston, TX}
-%       \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
-%   \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+    \resumeSubheading
+      {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
+      {GPA 4.70 / 4.00}{Houston, TX}
+      \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
+  \resumeSubHeadingListEnd
 % END REMOVE
 
 
@@ -169,27 +169,27 @@
     \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
-      % \resumeSubheading
-      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      % {Webmaster, Media Designer}{Houston, TX}
-      % \resumeItemListStart
-      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      % \resumeItemListEnd
+      \resumeSubheading
+      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      {Webmaster, Media Designer}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      \resumeItemListEnd
 % END REMOVE
 
   \resumeSubHeadingListEnd
 %-----------PROJECTS-----------
 \section{Relevant Projects}
     \resumeSubHeadingListStart
-    % \resumeProjectHeading
-        % {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
-        % \resumeItemListStart
-        %   \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
-        %   \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
-        %   \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
-        %   \resumeItemListEnd
+    \resumeProjectHeading
+        {\textbf{World Clock} $|$ \emph{JavaScript, HTML, CSS}}{Aug. 2023}
+        \resumeItemListStart
+          \resumeItem{Created a web application showing the time of chosen cities, with a helpful interactive map to aid in visualization}
+          \resumeItem{Designed using Maptiler and OpenStreetMap for map, and modeled UI with Figma}
+          \resumeItem{Published application to personal website with custom autocomplete search bar and tracked development with Git}
+          \resumeItemListEnd
     \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
@@ -199,19 +199,30 @@
             \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
           \resumeItemListEnd
       % GAMING, WEBDEV
-      % \resumeProjectHeading{}{}
-      % \resumeProjectHeading
-      %     {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
-      %     \resumeItemListStart
-      %       \resumeItem{Memory game generating random IATA airport codes for the user to recall}
-      %       \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
-      %     \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{IATA Guesser} $|$ \emph{JavaScript, HTML, CSS}}{Jul. 2023}
+          \resumeItemListStart
+            \resumeItem{Memory game generating random IATA airport codes for the user to recall}
+            \resumeItem{Used Toastr for popups reflecting answer and created a custom autocomplete search box}
+          \resumeItemListEnd
       % DATA SCIENCE
       \resumeProjectHeading
           {\textbf{IATA Country Sorter} $|$ \emph{Python}}{Jul. 2023}
           \resumeItemListStart
             \resumeItem{Invented a sorting script that maps inputted IATA airport codes into an output file for their country.}
             \resumeItem{Used for searching for flights by country in ITA Matrix}
+          \resumeItemListEnd
+      % MACHINE STRUCTURE
+      \resumeProjectHeading
+          {\textbf{artih} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+          \resumeItemListStart
+            \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
+            \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Apr. 2023}
+          \resumeItemListStart
+          \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
           \resumeItemListEnd
       % ALGOS
       \resumeProjectHeading
@@ -220,7 +231,7 @@
             \resumeItem{Built a program with partner that searches for user-queried text from specified directory}
             \resumeItem{Designed with dictionary ADT, where dictionary stores words and filepath, and collaborated via Git}
           \resumeItemListEnd
-          \resumeProjectHeading
+      \resumeProjectHeading
           {\textbf{zap} $|$ \emph{C++, Makefile, Bash}}{Apr. 2023}
           \resumeItemListStart
           \resumeItem{Wrote a Huffman compressor/decompressor for text files and practiced using priority queue ADT and recursion}
