--- a/source.tex
+++ b/source.tex
@@ -223,6 +223,7 @@
           {\textbf{vfl} $|$ \emph{C, Makefile, Bash}}{Apr. 2023}
           \resumeItemListStart
           \resumeItem{Authored a program that reads/writes binary files representing flight itineraries}
+          \resumeItem{Practiced optimizing file size by considering how many bits needed for each itinerary detail}
           \resumeItemListEnd
       % ALGOS
       \resumeProjectHeading
