--- a/source.tex
+++ b/source.tex
@@ -214,7 +214,7 @@
           \resumeItemListEnd
       % MACHINE STRUCTURE
       \resumeProjectHeading
-          {\textbf{artih} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
+          {\textbf{arith} $|$ \emph{C, Makefile, Bash}}{Oct. 2023}
           \resumeItemListStart
             \resumeItem{Wrote a low-level, multi-phase JPEG-style compressor/decompressor with a partner}
             \resumeItem{Learned how to perform floating point arithmetic and pack/unpack binary data modularly}
