Redid accidental commits of main

--- a/source.tex
+++ b/source.tex
@@ -122,12 +122,12 @@
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
-% \resumeSubHeadingListStart
-%     \resumeSubheading
-%       {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
-%       {GPA 4.70 / 4.00}{Houston, TX}
-%       \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
-%   \resumeSubHeadingListEnd
+\resumeSubHeadingListStart
+    \resumeSubheading
+      {Carnegie Vanguard High School}{Aug. 2018 – May 2022}
+      {GPA 4.70 / 4.00}{Houston, TX}
+      \resumeSubSubheading{Significant Activities: International Thespian Society, National Honor Society, Interact}{}
+  \resumeSubHeadingListEnd
 % END REMOVE
 
 
@@ -160,23 +160,23 @@
         \resumeItem{Service community via organizing mail, and analyzing building usage for largest academic buildings on campus}
       \resumeItemListEnd
 
-    % \resumeSubheading
-    %   {Texas Heart Institute}{May 2021 – Aug 2021}
-    %   {Visual Communications Intern}{Houston, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
-    %     \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
-    % \resumeItemListEnd
+    \resumeSubheading
+      {Texas Heart Institute}{May 2021 – Aug 2021}
+      {Visual Communications Intern}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Designed graphics and created animations representing cardiological research for publicity}
+        \resumeItem{Interviewed for animation work by the \textit{Houston Chronicle}}
+    \resumeItemListEnd
 
 % REMOVE HERE FOR ONE PAGE
-      % \resumeSubheading
-      % {Carnegie Theatre Company}{Aug. 2018 – May 2022}
-      % {Webmaster, Media Designer}{Houston, TX}
-      % \resumeItemListStart
-      %   \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
-      %   \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
-      %   \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
-      % \resumeItemListEnd
+      \resumeSubheading
+      {Carnegie Theatre Company}{Aug. 2018 – May 2022}
+      {Webmaster, Media Designer}{Houston, TX}
+      \resumeItemListStart
+        \resumeItem{Maintained website, social media, ticket sales, and production marketing graphics.}
+        \resumeItem{Designed live projections, edited videos, and rigged lights for productions.}
+        \resumeItem{Recognized by the International Thespian Society for work on theatrical marketing.}
+      \resumeItemListEnd
 % END REMOVE
 
   \resumeSubHeadingListEnd
