--- a/source.tex
+++ b/source.tex
@@ -193,7 +193,7 @@
     \resumeProjectHeading
           {\textbf{JetLag} $|$ \emph{Python}}{Mar. 2023 – Present}
           \resumeItemListStart
-            \resumeItem{Construct a REMOVE THIS tool to aid sleeptime changes when traveling between timezones during air travel,
+            \resumeItem{Construct a REMOVE THIS NOW tool to aid sleeptime changes when traveling between timezones during air travel,
             given flight details (e.g. airports, departure and arrival
             times)}
             \resumeItem{Craft using Python \texttt{tz} library and database of IATA-recognised airports to parse user input to calculations}
