Change GPA and relevant coursework

--- a/source.tex
+++ b/source.tex
@@ -116,9 +116,9 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Tufts University}{Aug. 2022 -- May 2026}
-      {GPA 3.82, BS Computer Science, BA Applied Mathematics}{Somerville, MA}
-      \resumeSubSubheading{Relevant Coursework: Machine structure and Assembly programming, Data structures and algorithms}{}
-      \resumeSubSubheading{Mathematical proofs, Linear algebra}{}{}{}
+      {GPA 3.85, BS Computer Science, BS Mathematics}{Somerville, MA}
+      \resumeSubSubheading{Relevant Coursework: Algorithms, Network security, Data structures}{}
+      \resumeSubSubheading{Machine structure and Assembly programming, Multivariable calculus, Linear algebra}{}{}{}
   \resumeSubHeadingListEnd
 
 % REMOVE HERE FOR ONE PAGE
